...
            android:gravity="center_vertical|start"
            android:singleLine="true"
            android:textAppearance="?android:attr/textAppearanceListItem"
            android:textColor="?android:attr/textColorAlertDialogListItem" />

        <TextView
            android:id="@android:id/text2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ellipsize="marquee"
            android:gravity="center_vertical|start"
            android:singleLine="true"
            android:textAppearance="?android:attr/textAppearanceListItemSecondary"
...
            android:textAppearance="?android:attr/textAppearanceListItemSecondary"
            android:textColor="?android:attr/textColorAlertDialogListItem" />

    </LinearLayout>

    <ImageView
        android:id="@+id/pref"
        android:layout_width="35dip"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:focusable="false"
        android:gravity="center_vertical|center_horizontal"
        android:src="@drawable/ic_add" />
...
